// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`DartGenerator should render \`class\` type 1`] = `
"class Address {
  String? StreetName;
  String? City;
  String? State;
  double? HouseNumber;
  bool? Marriage;
  Object? Members;
  List<Object>? ArrayType;
  Map<String, Object>? AdditionalProperties;

  Address();
}"
`;

exports[`DartGenerator should render \`enum\` type (integer type) 1`] = `""`;

exports[`DartGenerator should render \`enum\` type (string type) 1`] = `""`;

exports[`DartGenerator should render custom preset for \`enum\` type 1`] = `""`;

exports[`DartGenerator should render models and their dependencies 1`] = `
"import 'package:test.package/other_model.dart';
      
      class Address {
  String? StreetName;
  String? City;
  String? State;
  double? HouseNumber;
  bool? Marriage;
  Object? Members;
  List<Object>? ArrayType;
  OtherModel? OtherModel;
  Map<String, Object>? AdditionalProperties;

  Address();
}"
`;

exports[`DartGenerator should render models and their dependencies 2`] = `
"
      
      class OtherModel {
  String? StreetName;
  Map<String, Object>? AdditionalProperties;

  OtherModel();
}"
`;
